--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,16 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Books</h1>
-
+<h1>本一覧</h1>
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Category</th>
-      <th>Page</th>
-      <th>Format</th>
+      <th>タイトル</th>
+      <th>著者</th>
+      <th>カテゴリー</th>
+      <th>ページ数</th>
+      <th>本のタイプ</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @books.each do |book| %>
       <tr>
@@ -22,14 +19,11 @@
         <td><%= book.category %></td>
         <td><%= book.page %></td>
         <td><%= book.format %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '詳細', book %></td>
+        <td><%= link_to '変更', edit_book_path(book) %></td>
+        <td><%= link_to '削除', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Book', new_book_path %>
+<%= link_to '新規追加', new_book_path %>
