--- a/app/views/bookshelves/index.html.erb
+++ b/app/views/bookshelves/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Bookshelves#index</h1>
-<p>Find me in app/views/bookshelves/index.html.erb</p>
+<p id="notice"><%= notice %></p>
+<h1>本一覧</h1>
+<table>
+  <thead>
+    <tr>
+      <th>タイトル</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @bookshelves.each do |bookshelf| %>
+      <tr>
+        <td><%= bookshelf.title %></td>
+        <td><%= link_to '詳細', bookshelf %></td>
+        <td><%= link_to '変更', edit_bookshelf_path(bookshelf) %></td>
+        <td><%= link_to '削除', bookshelf, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to '新規追加', new_bookshelf_path %>
